gitops/mgmt/jupyterlab/kustomize/base/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab-service
spec:
  selector:
    app: jupyterlab
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
