gitops/mgmt/jupyterlab/kustomize/base/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: lab.mgmt.cloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jupyterlab-service
                port:
                  number: 8888
